Fixed small css mistake making buttons be aligned at the wrong position

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -47,6 +47,7 @@ img
     align-items: center;
 
     margin-top: 20px;
+    margin-left: 16px;
 
     font-size: 20px;
 }
@@ -98,6 +99,14 @@ img
     background-color: rgba(177, 231, 213);
 }
 
+#PrgJava
+{
+    position: absolute;
+
+    height: 354px;
+    background-color: rgb(231, 177, 177);
+}
+
 #PrgCSharp
 {
     position: absolute;
@@ -105,6 +114,15 @@ img
     height: 354px;
     background-color: rgba(181, 231, 177);
 }
+
+#PrgRust
+{
+    position: absolute;
+
+    height: 354px;
+    background-color: rgb(231, 206, 177);
+}
+
 
 #PrgJs
 { 
@@ -128,10 +146,13 @@ img
 
     background-color: black;
     
-    width: inherit;
+    width: 100%;
     height: 18px;
 
-    position: relative;
+    left: 0%;
+    bottom: -2%;
+
+    position: absolute;
 }
 
 #PrgButton div
